--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@next/font": "^14.2.8",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
